[package]
name = "reimann-visualizer"
authors = ["Diego Valdez"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
druid = {version = "0.8.2", features = ["svg"]}
druid-widget-nursery = "0.1.0"
plotters = "0.3.4"
plotters-druid = "0.3.0"
